Make the tool rename identifiers declared in (generated) ComputedStyleBase.h

Some style properties are manually declared (e.g. SVGComputedStyle.h),
while others are declared in a generated file (ComputedStyleBase.h). To
make sure everything is consistently renamed, this CL explicitly allows
the rename tool to process style identifiers, even if they live in the
generated ComputedStyleBase.h file.  The consistent renaming of style
properties is needed to consistently/sanely adjust make_style_builder.py
(which deals with both kinds of style properties [generated vs
non-generated] in a unified way).  For more explanation please see also
https://crrev.com/2667273003/#msg6.

BUG=685405

Review-Url: https://codereview.chromium.org/2667273003
Cr-Commit-Position: refs/heads/master@{#449176}

Former-commit-id: 1eb45fbe3b9ef87e457f3bdb044a9f19a5e20543